--- a/main.css
+++ b/main.css
@@ -22,8 +22,9 @@ border-color: #b62f26;
 	background-color: rgba(32,35,41,0.9);
 	color: #ddd;
 }
-.class1{
+.class1 img{
    height: 250px;
+
 
 
 }
