--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ border-color: #b62f26;
 	background-attachment: fixed ; 
 
 }
-#What do meals on wheels customers think of us?{
+#buzz h2{
 	background-color: rgba(32,35,41,0.9);
 	color: #df80ff;
 }
