--- a/main.css
+++ b/main.css
@@ -18,8 +18,7 @@ border-color: #b62f26;
 	background-attachment: fixed ; 
 
 }
-#buzz h2{
-	background-color: rgba(32,35,41,0.9);
+#buzz h2 small{
 	color: #df80ff;
 }
 .class1 img{
