--- a/main.css
+++ b/main.css
@@ -24,9 +24,15 @@ border-color: #b62f26;
 .class1 img{
    height: 250px;
 
+ }
+
+.class1 {
+	font-family: Impact, Charcoal, sans-serif;
 
 
 }
+
+
 .end {
 	text-align:center;
     margin-top:100px ;
