--- a/main.css
+++ b/main.css
@@ -11,11 +11,12 @@ border-color: #009ad5; }
 background-color: #b62f26;
 border-color: #b62f26; 
 }
-.jumbotron{ 
+.background: { 
 	min-height: 600px;
 	background-image:url('images/food.jpg');
 	background-size:cover;
 	background-attachment: fixed ; 
+
 
 }
 #buzz h2 small{
@@ -54,6 +55,12 @@ form {
       text-align:center; 
       vertical-align: middle;
       margin: auto;
+      display: block;
+
+	
+
+
+
 
 
 
