--- a/main.css
+++ b/main.css
@@ -56,16 +56,8 @@ border-color: #b62f26;
 form {
       text-align:center; 
       vertical-align: middle;
-      margin: auto;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-
-
-	
-
-
+      margin: 300px auto;
+    
 
 
 
