--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ border-color: #009ad5; }
 background-color: #b62f26;
 border-color: #b62f26; 
 }
-.jumbotron{ 
+.background { 
 	min-height: 600px;
 	background-image:url('images/food.jpg');
 	background-size:cover;
@@ -54,13 +54,7 @@ border-color: #b62f26;
 form {
       text-align:center; 
       vertical-align: middle;
-<<<<<<< HEAD
-      
-
-=======
       margin: auto;
->>>>>>> parent of 7c9d77c... dwww
-
 
 
 }
