--- a/main.css
+++ b/main.css
@@ -55,8 +55,8 @@ form {
       text-align:center; 
       vertical-align: middle;
       margin: auto;
-      padding-top: 300px;
-      padding-bottom: 300px;
+     margin-top: 300px;
+     margin-bottom: 300px;
 
 
 }
