--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ background-color: #00acee;
 border-color: #009ad5; }
 .btn-facebook { background-color: #4868ac; border-color: #314776;
 }
-.btn-pinterest {
+.btn-JustEat {
 background-color: #b62f26;
 border-color: #b62f26; 
 }
